--- a/SRC/My-Zone/My-Zone/Login.storyboard
+++ b/SRC/My-Zone/My-Zone/Login.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="请输入你的手机号" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Q9F-7q-68f">
-                                <rect key="frame" x="30" y="104" width="540" height="30"/>
+                                <rect key="frame" x="30" y="109" width="540" height="30"/>
                                 <animations/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="9pm-RL-5Ff"/>
@@ -28,7 +28,7 @@
                                 <textInputTraits key="textInputTraits" keyboardType="numberPad" returnKeyType="done"/>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="请输入你的密码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xx0-56-lK2">
-                                <rect key="frame" x="30" y="148" width="540" height="30"/>
+                                <rect key="frame" x="30" y="159" width="540" height="30"/>
                                 <animations/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="wM1-E8-cbW"/>
@@ -37,7 +37,7 @@
                                 <textInputTraits key="textInputTraits" keyboardType="numberPad" returnKeyType="done"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xBq-i2-SwC">
-                                <rect key="frame" x="30" y="192" width="20" height="20"/>
+                                <rect key="frame" x="30" y="219" width="20" height="20"/>
                                 <animations/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="20" id="0Gy-ij-eYN"/>
@@ -59,18 +59,18 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="我有邀请码" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vCI-tr-XuA">
-                                <rect key="frame" x="60" y="192" width="90" height="21"/>
+                                <rect key="frame" x="60" y="219" width="90" height="21"/>
                                 <animations/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="90" id="3b1-0a-lnM"/>
                                     <constraint firstAttribute="height" constant="21" id="ewR-QW-dYP"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="请输入验证码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fVb-OV-mLr">
-                                <rect key="frame" x="30" y="227" width="450" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="请输入邀请码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fVb-OV-mLr">
+                                <rect key="frame" x="30" y="244" width="450" height="30"/>
                                 <animations/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="PE0-n7-MzE"/>
@@ -79,7 +79,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="adB-xx-BND">
-                                <rect key="frame" x="180" y="347" width="240" height="34"/>
+                                <rect key="frame" x="180" y="304" width="240" height="34"/>
                                 <animations/>
                                 <color key="backgroundColor" red="0.11343763751945235" green="0.6532174700144624" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
@@ -103,20 +103,20 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="fVb-OV-mLr" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="10" id="09y-gY-FKL"/>
-                            <constraint firstItem="fVb-OV-mLr" firstAttribute="top" secondItem="vCI-tr-XuA" secondAttribute="bottom" constant="14" id="9UM-68-b69"/>
+                            <constraint firstItem="fVb-OV-mLr" firstAttribute="top" secondItem="vCI-tr-XuA" secondAttribute="bottom" constant="4" id="9UM-68-b69"/>
                             <constraint firstItem="Q9F-7q-68f" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="10" id="DjE-oe-fa1"/>
-                            <constraint firstItem="Q9F-7q-68f" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="40" id="FcR-uy-CFv"/>
-                            <constraint firstItem="vCI-tr-XuA" firstAttribute="top" secondItem="xx0-56-lK2" secondAttribute="bottom" constant="14" id="Fe4-vX-En6"/>
-                            <constraint firstItem="xBq-i2-SwC" firstAttribute="top" secondItem="xx0-56-lK2" secondAttribute="bottom" constant="14" id="GI9-nr-z2p"/>
+                            <constraint firstItem="Q9F-7q-68f" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="45" id="FcR-uy-CFv"/>
+                            <constraint firstItem="vCI-tr-XuA" firstAttribute="top" secondItem="xx0-56-lK2" secondAttribute="bottom" constant="30" id="Fe4-vX-En6"/>
+                            <constraint firstItem="xBq-i2-SwC" firstAttribute="top" secondItem="xx0-56-lK2" secondAttribute="bottom" constant="30" id="GI9-nr-z2p"/>
                             <constraint firstItem="adB-xx-BND" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="Huu-nl-abg"/>
                             <constraint firstAttribute="trailingMargin" secondItem="xx0-56-lK2" secondAttribute="trailing" constant="10" id="JuU-8c-10L"/>
                             <constraint firstItem="xBq-i2-SwC" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="10" id="LGi-mR-w6m"/>
-                            <constraint firstItem="xx0-56-lK2" firstAttribute="top" secondItem="Q9F-7q-68f" secondAttribute="bottom" constant="14" id="P2h-de-eCx"/>
+                            <constraint firstItem="xx0-56-lK2" firstAttribute="top" secondItem="Q9F-7q-68f" secondAttribute="bottom" constant="20" id="P2h-de-eCx"/>
                             <constraint firstAttribute="trailingMargin" secondItem="fVb-OV-mLr" secondAttribute="trailing" constant="100" id="TmS-vZ-scE"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Q9F-7q-68f" secondAttribute="trailing" constant="10" id="io9-jJ-0F0"/>
                             <constraint firstItem="xx0-56-lK2" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="10" id="jWF-9F-QfW"/>
                             <constraint firstItem="vCI-tr-XuA" firstAttribute="leading" secondItem="xBq-i2-SwC" secondAttribute="trailing" constant="10" id="mE4-Qi-Hi7"/>
-                            <constraint firstItem="adB-xx-BND" firstAttribute="top" secondItem="fVb-OV-mLr" secondAttribute="bottom" constant="90" id="rdG-DI-KYX"/>
+                            <constraint firstItem="adB-xx-BND" firstAttribute="top" secondItem="fVb-OV-mLr" secondAttribute="bottom" constant="30" id="rdG-DI-KYX"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="登录" id="z5x-CP-pZD">
