--- a/SRC/My-Zone/My-Zone/MVVM/View/MMAddImageTableViewCell.xib
+++ b/SRC/My-Zone/My-Zone/MVVM/View/MMAddImageTableViewCell.xib
@@ -8,36 +8,42 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="318" id="KGk-i7-Jjw" customClass="MMAddImageTableViewCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="MMAddImageTableViewCell" rowHeight="318" id="KGk-i7-Jjw" customClass="MMAddImageTableViewCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="320"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="319.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView tag="5" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zEJ-9a-6lD">
+                    <imageView tag="5" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zEJ-9a-6lD">
                         <rect key="frame" x="0.0" y="213.5" width="106" height="106"/>
                         <animations/>
+                        <color key="backgroundColor" red="0.70311254645964594" green="0.76069917376284013" blue="0.9024818497474747" alpha="1" colorSpace="calibratedRGB"/>
                     </imageView>
-                    <imageView tag="4" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1wb-1K-Vur">
+                    <imageView tag="4" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1wb-1K-Vur">
                         <rect key="frame" x="107" y="213" width="106" height="106"/>
                         <animations/>
+                        <color key="backgroundColor" red="0.70311254645964594" green="0.76069917376284013" blue="0.9024818497474747" alpha="1" colorSpace="calibratedRGB"/>
                     </imageView>
-                    <imageView tag="3" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1G7-gw-jYs">
+                    <imageView tag="3" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1G7-gw-jYs">
                         <rect key="frame" x="214" y="213.5" width="106" height="106"/>
                         <animations/>
+                        <color key="backgroundColor" red="0.70311254645964594" green="0.76069917376284013" blue="0.9024818497474747" alpha="1" colorSpace="calibratedRGB"/>
                     </imageView>
-                    <imageView tag="2" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YEy-4i-wtR">
+                    <imageView tag="2" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YEy-4i-wtR">
                         <rect key="frame" x="214" y="107" width="106" height="105.5"/>
                         <animations/>
+                        <color key="backgroundColor" red="0.70311254645964594" green="0.76069917376284013" blue="0.9024818497474747" alpha="1" colorSpace="calibratedRGB"/>
                     </imageView>
-                    <imageView tag="1" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="x11-hF-0WN">
+                    <imageView tag="1" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="x11-hF-0WN">
                         <rect key="frame" x="214" y="0.0" width="106" height="106"/>
                         <animations/>
+                        <color key="backgroundColor" red="0.70311254645964594" green="0.76069917376284013" blue="0.9024818497474747" alpha="1" colorSpace="calibratedRGB"/>
                     </imageView>
-                    <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="JvG-fF-3ck">
+                    <imageView contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="JvG-fF-3ck">
                         <rect key="frame" x="0.0" y="0.0" width="213" height="212"/>
                         <animations/>
+                        <color key="backgroundColor" red="0.70311254645964594" green="0.76069917376284013" blue="0.9024818497474747" alpha="1" colorSpace="calibratedRGB"/>
                     </imageView>
                 </subviews>
                 <animations/>
@@ -73,6 +79,7 @@
                 </constraints>
             </tableViewCellContentView>
             <animations/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <connections>
                 <outletCollection property="imageViews" destination="JvG-fF-3ck" id="wNA-nD-2fa"/>
                 <outletCollection property="imageViews" destination="x11-hF-0WN" id="CiS-5F-0MM"/>
