--- a/SRC/My-Zone/My-Zone/MVVM/View/MMAddImageTableViewCell.xib
+++ b/SRC/My-Zone/My-Zone/MVVM/View/MMAddImageTableViewCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15E27e" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -17,36 +17,29 @@
                 <subviews>
                     <imageView tag="5" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zEJ-9a-6lD">
                         <rect key="frame" x="0.0" y="213.5" width="106" height="106"/>
-                        <animations/>
                         <color key="backgroundColor" red="0.70311254645964594" green="0.76069917376284013" blue="0.9024818497474747" alpha="1" colorSpace="calibratedRGB"/>
                     </imageView>
                     <imageView tag="4" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1wb-1K-Vur">
                         <rect key="frame" x="107" y="213" width="106" height="106"/>
-                        <animations/>
                         <color key="backgroundColor" red="0.70311254645964594" green="0.76069917376284013" blue="0.9024818497474747" alpha="1" colorSpace="calibratedRGB"/>
                     </imageView>
                     <imageView tag="3" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1G7-gw-jYs">
                         <rect key="frame" x="214" y="213.5" width="106" height="106"/>
-                        <animations/>
                         <color key="backgroundColor" red="0.70311254645964594" green="0.76069917376284013" blue="0.9024818497474747" alpha="1" colorSpace="calibratedRGB"/>
                     </imageView>
                     <imageView tag="2" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YEy-4i-wtR">
                         <rect key="frame" x="214" y="107" width="106" height="105.5"/>
-                        <animations/>
                         <color key="backgroundColor" red="0.70311254645964594" green="0.76069917376284013" blue="0.9024818497474747" alpha="1" colorSpace="calibratedRGB"/>
                     </imageView>
                     <imageView tag="1" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="x11-hF-0WN">
                         <rect key="frame" x="214" y="0.0" width="106" height="106"/>
-                        <animations/>
                         <color key="backgroundColor" red="0.70311254645964594" green="0.76069917376284013" blue="0.9024818497474747" alpha="1" colorSpace="calibratedRGB"/>
                     </imageView>
                     <imageView contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="JvG-fF-3ck">
                         <rect key="frame" x="0.0" y="0.0" width="213" height="212"/>
-                        <animations/>
                         <color key="backgroundColor" red="0.70311254645964594" green="0.76069917376284013" blue="0.9024818497474747" alpha="1" colorSpace="calibratedRGB"/>
                     </imageView>
                 </subviews>
-                <animations/>
                 <constraints>
                     <constraint firstAttribute="trailingMargin" secondItem="YEy-4i-wtR" secondAttribute="trailing" constant="-8" id="2nh-ul-yAx"/>
                     <constraint firstItem="x11-hF-0WN" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-8" id="5fg-g2-hCe"/>
@@ -78,7 +71,6 @@
                     <constraint firstItem="JvG-fF-3ck" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-8" id="zfb-iL-5xN"/>
                 </constraints>
             </tableViewCellContentView>
-            <animations/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <connections>
                 <outletCollection property="imageViews" destination="JvG-fF-3ck" id="wNA-nD-2fa"/>
