--- a/SRC/My-Zone/My-Zone/MVVM/View/MMPasswordCell.xib
+++ b/SRC/My-Zone/My-Zone/MVVM/View/MMPasswordCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15E39d" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -17,7 +17,6 @@
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="修改" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="50" translatesAutoresizingMaskIntoConstraints="NO" id="LZ1-IG-sN7">
                         <rect key="frame" x="241" y="14.5" width="34" height="21"/>
-                        <animations/>
                         <constraints>
                             <constraint firstAttribute="width" relation="lessThanOrEqual" constant="50" id="HO9-yl-T7C"/>
                             <constraint firstAttribute="height" constant="21" id="N9L-Bi-KDE"/>
@@ -28,7 +27,6 @@
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BackImage1" translatesAutoresizingMaskIntoConstraints="NO" id="oil-tW-IH8">
                         <rect key="frame" x="285" y="15" width="20" height="20"/>
-                        <animations/>
                         <constraints>
                             <constraint firstAttribute="width" constant="20" id="i4H-oO-7Wt"/>
                             <constraint firstAttribute="height" constant="20" id="sSc-ZE-R8s"/>
@@ -36,7 +34,6 @@
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="登录密码" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ifW-3p-M0e">
                         <rect key="frame" x="15" y="14.5" width="68" height="21"/>
-                        <animations/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="Ctn-hC-DFs"/>
                             <constraint firstAttribute="width" relation="lessThanOrEqual" constant="100" id="Plp-pC-Elc"/>
@@ -46,7 +43,6 @@
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
-                <animations/>
                 <constraints>
                     <constraint firstAttribute="trailingMargin" secondItem="oil-tW-IH8" secondAttribute="trailing" constant="7" id="CU9-PQ-44w"/>
                     <constraint firstItem="oil-tW-IH8" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="HAq-1N-03v"/>
@@ -56,7 +52,6 @@
                     <constraint firstItem="ifW-3p-M0e" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="7" id="hna-om-Mo2"/>
                 </constraints>
             </tableViewCellContentView>
-            <animations/>
         </tableViewCell>
     </objects>
     <resources>
