--- a/SRC/My-Zone/My-Zone/MVVM/View/MMFriendsCell.xib
+++ b/SRC/My-Zone/My-Zone/MVVM/View/MMFriendsCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15E39d" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -17,7 +17,6 @@
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gBW-wW-nW6">
                         <rect key="frame" x="15" y="20" width="35" height="35"/>
-                        <animations/>
                         <constraints>
                             <constraint firstAttribute="height" constant="35" id="wSX-6D-nGP"/>
                             <constraint firstAttribute="width" constant="35" id="x8K-ef-CdS"/>
@@ -25,7 +24,6 @@
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="金三胖" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JEb-j9-klQ">
                         <rect key="frame" x="58" y="20" width="51" height="19"/>
-                        <animations/>
                         <constraints>
                             <constraint firstAttribute="width" relation="lessThanOrEqual" constant="200" id="2sl-qi-bgV"/>
                             <constraint firstAttribute="height" constant="19" id="LIC-Is-adE"/>
@@ -36,7 +34,6 @@
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="赞了潘金莲" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pv5-NT-n0g">
                         <rect key="frame" x="58" y="41" width="60" height="14"/>
-                        <animations/>
                         <constraints>
                             <constraint firstAttribute="width" relation="lessThanOrEqual" constant="200" id="FPV-9V-Y74"/>
                             <constraint firstAttribute="height" constant="14" id="Fuo-DE-fl1"/>
@@ -47,7 +44,6 @@
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="I7S-Zr-omS">
                         <rect key="frame" x="58" y="63" width="235" height="235"/>
-                        <animations/>
                         <constraints>
                             <constraint firstAttribute="height" constant="235" id="h9i-tx-4Ee"/>
                             <constraint firstAttribute="width" constant="235" id="y8G-Rt-LMV"/>
@@ -55,7 +51,6 @@
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="20分钟前" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lXc-UZ-oZM">
                         <rect key="frame" x="58" y="304" width="51" height="14"/>
-                        <animations/>
                         <constraints>
                             <constraint firstAttribute="width" relation="lessThanOrEqual" constant="200" id="UoS-LT-hTI"/>
                             <constraint firstAttribute="height" constant="14" id="xvJ-La-mSe"/>
@@ -65,7 +60,6 @@
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
-                <animations/>
                 <constraints>
                     <constraint firstItem="lXc-UZ-oZM" firstAttribute="top" secondItem="I7S-Zr-omS" secondAttribute="bottom" constant="6" id="9im-r9-wkl"/>
                     <constraint firstItem="JEb-j9-klQ" firstAttribute="leading" secondItem="gBW-wW-nW6" secondAttribute="trailing" constant="8" id="AE2-RQ-3Rd"/>
@@ -79,7 +73,6 @@
                     <constraint firstItem="I7S-Zr-omS" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="50" id="c28-Nr-a3L"/>
                 </constraints>
             </tableViewCellContentView>
-            <animations/>
             <point key="canvasLocation" x="298" y="307.5"/>
         </tableViewCell>
     </objects>
