--- a/SRC/My-Zone/My-Zone/MVVM/View/MMRemoveCacheCell.xib
+++ b/SRC/My-Zone/My-Zone/MVVM/View/MMRemoveCacheCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15E39d" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -17,7 +17,6 @@
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="清除缓存" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gRm-Db-uP6">
                         <rect key="frame" x="15" y="14.5" width="68" height="21"/>
-                        <animations/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="PRd-Qm-D8d"/>
                             <constraint firstAttribute="width" relation="lessThanOrEqual" constant="100" id="TrR-3W-xKB"/>
@@ -27,13 +26,11 @@
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
-                <animations/>
                 <constraints>
                     <constraint firstItem="gRm-Db-uP6" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="GDl-IN-KJ5"/>
                     <constraint firstItem="gRm-Db-uP6" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="7" id="KF5-iU-Mfo"/>
                 </constraints>
             </tableViewCellContentView>
-            <animations/>
         </tableViewCell>
     </objects>
 </document>
