--- a/SRC/My-Zone/My-Zone/MVVM/View/MMFriendsCell.xib
+++ b/SRC/My-Zone/My-Zone/MVVM/View/MMFriendsCell.xib
@@ -12,7 +12,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="327"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="326.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="327"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gBW-wW-nW6">
@@ -73,6 +73,13 @@
                     <constraint firstItem="I7S-Zr-omS" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="50" id="c28-Nr-a3L"/>
                 </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="evaluteLabel" destination="pv5-NT-n0g" id="V1Z-69-dl3"/>
+                <outlet property="iconImageView" destination="gBW-wW-nW6" id="hGO-wZ-qcY"/>
+                <outlet property="timeLable" destination="lXc-UZ-oZM" id="SJW-Ag-G5f"/>
+                <outlet property="userNameLabel" destination="JEb-j9-klQ" id="HZV-na-JIx"/>
+                <outlet property="usetHeaderImageView" destination="I7S-Zr-omS" id="pII-Lq-fdi"/>
+            </connections>
             <point key="canvasLocation" x="298" y="307.5"/>
         </tableViewCell>
     </objects>
